src/test/ui/const-generics/issue-66596-impl-trait-for-str-const-arg.min.stderr
error: `&'static str` is forbidden as the type of a const generic parameter
  --> $DIR/issue-66596-impl-trait-for-str-const-arg.rs:8:25
   |
LL | trait Trait<const NAME: &'static str> {
   |                         ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to previous error

